# TDXDataFetcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLISH_GUIDE.md  Plans.md  README.md  _verify_layout.py  _verify_parse.py  pyproject.toml  setup.py  tdx_cache.db
.github/workflows/: publish.yml  test.yml
docs/: KNOWLEDGE.md
docs/plans/archive/: Plans-2026-04-10-pypi-release.md
examples/: basic_usage.py
src/tdxapi/: __init__.py  advanced.py  async_client.py  bulk_download.py  cache.py  connection_pool.py  data_quality.py  export.py  indicators.py  subscription.py
src/tdxapi/models/: __init__.py  quote.py
src/tdxapi/network/: client.py
src/tdxapi/parser/: __init__.py  quote_parser.py
src/tdxapi/protocol/: constants.py  packet.py  requests.py
src/tdxapi/utils/: helpers.py
tests/: test_advanced.py  test_async_client.py  test_bulk_download.py  test_cache.py  test_connection_pool.py  test_data_quality.py  test_export.py  test_indicators.py  test_integration.py  test_models.py  test_parser.py  test_protocol.py  test_real_network.py  test_subscription.py  test_utils.py
